# latch-contracts

./: .gitignore  BUILD.md  PLAN.md  PRODUCTION_IMPLEMENTATION_SPIKE.md  README.md  RESEARCH_LOG.md  WEB_SPIKE.md  factory-spec.md
latch-account-factory/: .gitignore  Cargo.toml  README.md
latch-account-factory/contracts/dummy-account/: Cargo.toml
latch-account-factory/contracts/dummy-account/src/: lib.rs
latch-account-factory/contracts/dummy-singleton/: Cargo.toml
latch-account-factory/contracts/dummy-singleton/src/: lib.rs
latch-account-factory/contracts/factory-contract/: Cargo.toml
latch-account-factory/contracts/factory-contract/src/: lib.rs  test.rs
latch-account-factory/contracts/factory-contract/test_snapshots/test/: create_account_deploys_at_precomputed_address.1.json  create_account_deploys_contract_at_address.1.json  create_account_emits_account_created_event.1.json  create_account_is_idempotent.1.json  create_account_mixed_signers_multisig.1.json  create_account_multisig_deploys_at_precomputed_address.1.json  create_account_with_secp256k1_signer.1.json  create_account_with_webauthn_signer.1.json  each_verifier_address_is_distinct.1.json  get_threshold_policy_returns_stored_address.1.json  get_verifier_returns_stored_addresses.1.json  same_params_same_address.1.json  threshold_above_signer_count_is_rejected.1.json
latch-account-factory/contracts/factory-contract/testdata/: dummy_account.wasm  dummy_singleton.wasm
latch-smart-account/: BUILD.md  Cargo.toml  README.md
latch-smart-account/contracts/smart-account/: Cargo.toml
latch-smart-account/contracts/smart-account/src/: test.rs
latch-smart-account/contracts/smart-account/test_snapshots/test/: add_context_rule_requires_self_auth.1.json  add_context_rule_succeeds_with_self_auth.1.json  add_policy_requires_self_auth.1.json  add_signer_and_policy_succeed_with_self_auth.1.json  add_signer_requires_self_auth.1.json  constructor_creates_one_default_rule_named_default.1.json  execute_forwards_calls.1.json  execute_requires_self_auth.1.json
latch-smart-account/src/: lib.rs  test.rs
latch-threshold-policy/: Cargo.toml
latch-verifiers/: ed25519-phantom-verifier-spec.md  secp256k1-verifier-spec.md  webauthn-verifier-spec.md
latch-verifiers/secp256k1-verifier/: Cargo.toml
latch-verifiers/secp256k1-verifier/src/: lib.rs
(+8 files in other folders)
