[workspace]
resolver = "2"
members = [
  "contracts/factory-contract",
  "contracts/dummy-account",
  "contracts/dummy-singleton",
]

[workspace.dependencies]
soroban-sdk = "25.0.2"
stellar-accounts = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", rev = "187ad25428a21bf829fb6f123238e3cddb24e02a", package = "stellar-accounts" }
ed25519-dalek = "2.1.1"
k256 = "0.13.4"
p256 = { version = "0.13.2", features = ["ecdsa"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
